--- a/views/index.html
+++ b/views/index.html
@@ -23,7 +23,7 @@
         <tbody>
           <tr>
             <td>inverter_data</td>
-            <td>300000</td>
+            <td>4000</td>
             <td class="btn_edit">
               <button class="btn" onclick="btn_Edit(this)">Edit</button>
             </td>
@@ -37,7 +37,7 @@
           </tr>
           <tr>
             <td>pv_optimizer_data</td>
-            <td>300000</td>
+            <td>30000</td>
             <td class="btn_edit">
               <button class="btn" onclick="btn_Edit(this)">Edit</button>
             </td>
@@ -74,6 +74,42 @@
                 <button class="btn" onclick="btn_Insert(this)">Cassandra</button>
                 <button class="btn" onclick="btn_Insert(this)">Redis</button>
                 <button class="btn" onclick="btn_Insert(this)">Kafka</button>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>redis_inverter_data</td>
+            <td>3000</td>
+            <td class="btn_edit">
+              <button class="btn" onclick="btn_Edit(this)">Edit</button>
+            </td>
+            <td>
+              <div class="btn_control">
+                <button class="btn" onclick="btn_Insert(this)">Redis</button>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>power_status_updates</td>
+            <td>3000</td>
+            <td class="btn_edit">
+              <button class="btn" onclick="btn_Edit(this)">Edit</button>
+            </td>
+            <td>
+              <div class="btn_control">
+                <button class="btn" onclick="btn_Insert(this)">Redis</button>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>inverter_error</td>
+            <td>3000</td>
+            <td class="btn_edit">
+              <button class="btn" onclick="btn_Edit(this)">Edit</button>
+            </td>
+            <td>
+              <div class="btn_control">
+                <button class="btn" onclick="btn_Insert(this)">Redis</button>
               </div>
             </td>
           </tr>
