--- a/views/index.html
+++ b/views/index.html
@@ -37,7 +37,7 @@
           </tr>
           <tr>
             <td>pv_optimizer_data</td>
-            <td>30000</td>
+            <td>3000</td>
             <td class="btn_edit">
               <button class="btn" onclick="btn_Edit(this)">Edit</button>
             </td>
@@ -51,7 +51,7 @@
           </tr>
           <tr>
             <td>statistical_data</td>
-            <td>300000</td>
+            <td>3000</td>
             <td class="btn_edit">
               <button class="btn" onclick="btn_Edit(this)">Edit</button>
             </td>
@@ -65,7 +65,7 @@
           </tr>
           <tr>
             <td>power_station</td>
-            <td>300000</td>
+            <td>3000</td>
             <td class="btn_edit">
               <button class="btn" onclick="btn_Edit(this)">Edit</button>
             </td>
@@ -78,7 +78,7 @@
             </td>
           </tr>
           <tr>
-            <td>redis_inverter_data</td>
+            <td>power_data</td>
             <td>3000</td>
             <td class="btn_edit">
               <button class="btn" onclick="btn_Edit(this)">Edit</button>
@@ -90,7 +90,31 @@
             </td>
           </tr>
           <tr>
-            <td>power_status_updates</td>
+            <td>optimizer_power</td>
+            <td>3000</td>
+            <td class="btn_edit">
+              <button class="btn" onclick="btn_Edit(this)">Edit</button>
+            </td>
+            <td>
+              <div class="btn_control">
+                <button class="btn" onclick="btn_Insert(this)">Redis</button>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>inverter_status</td>
+            <td>3000</td>
+            <td class="btn_edit">
+              <button class="btn" onclick="btn_Edit(this)">Edit</button>
+            </td>
+            <td>
+              <div class="btn_control">
+                <button class="btn" onclick="btn_Insert(this)">Redis</button>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>optimizer_status</td>
             <td>3000</td>
             <td class="btn_edit">
               <button class="btn" onclick="btn_Edit(this)">Edit</button>
@@ -103,6 +127,18 @@
           </tr>
           <tr>
             <td>inverter_error</td>
+            <td>3000</td>
+            <td class="btn_edit">
+              <button class="btn" onclick="btn_Edit(this)">Edit</button>
+            </td>
+            <td>
+              <div class="btn_control">
+                <button class="btn" onclick="btn_Insert(this)">Redis</button>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>optimizer_error</td>
             <td>3000</td>
             <td class="btn_edit">
               <button class="btn" onclick="btn_Edit(this)">Edit</button>
