--- a/views/index.html
+++ b/views/index.html
@@ -23,15 +23,13 @@
         <tbody>
           <tr>
             <td>inverter_data</td>
-            <td>4000</td>
+            <td>3000</td>
             <td class="btn_edit">
               <button class="btn" onclick="btn_Edit(this)">Edit</button>
             </td>
             <td>
               <div class="btn_control">
                 <button class="btn" onclick="btn_Insert(this)">Cassandra</button>
-                <button class="btn" onclick="btn_Insert(this)">Redis</button>
-                <button class="btn" onclick="btn_Insert(this)">Kafka</button>
               </div>
             </td>
           </tr>
@@ -44,8 +42,6 @@
             <td>
               <div class="btn_control">
                 <button class="btn" onclick="btn_Insert(this)">Cassandra</button>
-                <button class="btn" onclick="btn_Insert(this)">Redis</button>
-                <button class="btn" onclick="btn_Insert(this)">Kafka</button>
               </div>
             </td>
           </tr>
@@ -58,8 +54,6 @@
             <td>
               <div class="btn_control">
                 <button class="btn" onclick="btn_Insert(this)">Cassandra</button>
-                <button class="btn" onclick="btn_Insert(this)">Redis</button>
-                <button class="btn" onclick="btn_Insert(this)">Kafka</button>
               </div>
             </td>
           </tr>
@@ -72,8 +66,6 @@
             <td>
               <div class="btn_control">
                 <button class="btn" onclick="btn_Insert(this)">Cassandra</button>
-                <button class="btn" onclick="btn_Insert(this)">Redis</button>
-                <button class="btn" onclick="btn_Insert(this)">Kafka</button>
               </div>
             </td>
           </tr>
@@ -274,13 +266,13 @@
 
   .btn_control {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 
   }
 
   .btn_control .btn {
-    width: 30%;
+    width: 50%;
     font-size: 0.6vw;
     background-color: #4CAF50;
     color: white;
